--- a/Desktop/EcuaprestApp/requirements.txt
+++ b/Desktop/EcuaprestApp/requirements.txt
@@ -4,11 +4,15 @@ colorama==0.4.6
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.0
+humanize==4.12.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 Werkzeug==3.1.3
